# CppProjectTemplate

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  Notes.rtf  README  README.md  notes2.txt
ProjA/: CMakeLists.txt
ProjA/cmake/: CPackConfig.cmake  ProjAConfig.cmake
ProjA/doc/: documentation-config.doxygen.in  release-notes.dox  technical-overview.dox  versioning.txt  welcome.dox
ProjA/include/: CMakeLists.txt
ProjA/include/ProjA/: Version.h.in  World.h
ProjA/src/: CMakeLists.txt  Version.cxx  World.cxx  main.cxx
ProjA/test/: CMakeLists.txt  testProjA.cxx
ProjB/: CMakeLists.txt
ProjB/cmake/: CPackConfig.cmake  ProjBConfig.cmake
ProjB/doc/: documentation-config.doxygen.in  release-notes.dox  technical-overview.dox  welcome.dox
ProjB/include/: CMakeLists.txt
ProjB/include/ProjB/: Version.h.in  World.h
ProjB/src/: CMakeLists.txt  Version.cxx  World.cxx  main.cxx
ProjB/test/: CMakeLists.txt  testProjB.cxx
cmake/: DoxygenTarget.cmake  PackageConfigurator.cmake
projA/: CMakeLists.txt
projA/CMake/: CPackConfig.cmake
projA/doc/: CMakeLists.txt  documentation-config.doxygen.in  technical-overview.dox  user-guide.dox  welcome.dox
projA/include/: CMakeLists.txt
projA/include/projA/: CMakeLists.txt  Version.h.in  World.h
projA/src/: CMakeLists.txt  Version.cxx  World.cxx  main.cxx
projA/test/: CMakeLists.txt  testProjA.cxx
projB/: CMakeLists.txt
projB/cmake/: CPackConfig.cmake
projB/doc/: CMakeLists.txt  release-notes.dox
projB/include/: CMakeLists.txt
projB/include/projB/: Version.h.in  World.h
projB/src/: CMakeLists.txt  Version.cxx  World.cxx  main.cxx
projB/test/: CMakeLists.txt  testProjB.cxx
